test/fail/arraydecl.min
program
    array x := 123
start
end
